ffmpeg: fix video synchronization code to be exact on constant fps videos. Fixes Ticket137

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>